--- a/templates/append.html
+++ b/templates/append.html
@@ -5,7 +5,10 @@
 
 {{define "body"}}
 
-<form>
+<div class="album py-5 bg-light">
+<div class="container">
+<div class="row justify-content-md-center">
+<form style="width:100%;">
   <div class="form-group">
     <label for="brand">Select brand</label>
     <select class="form-control" id="brand">
@@ -43,8 +46,11 @@
   <div class="form-group">        
     <button type="submit" class="btn btn-primary" id="append-btn">Append</button>
   </div>
-  
 </form>
+
+</div>
+</div>
+</div>
 
 {{end}}
 
