--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-﻿{{define "head"}}
+{{define "head"}}
 {{end}}
 
 {{define "title"}}Ошибка{{end}}
@@ -7,7 +7,7 @@
 <div class="container" id="container">
 <div class="row" style="text-align:left;">
 <div class="col-md-8 col-md-offset-2">
-{{.Status}} {{.Error}}
+{{.Status}} {{.Error}} {{.Info}}
 </div>
 </div>
 </div>
