--- a/templates/wozkilist.html
+++ b/templates/wozkilist.html
@@ -2,7 +2,7 @@
    <link href="/static/highlight/styles/ir_black.css" rel="stylesheet" media="screen">
 {{end}}
 
-{{define "title"}} "asd" {{end}}
+{{define "title"}} Wozki {{end}}
 
 {{define "body"}}
 {{range .}}
