--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">  
   <!--<link rel="stylesheet" href="/static/bootstrap/css/bootstrap-theme.min.css">-->
   <link rel="stylesheet" href="/static/stylesheets/main.css">
   
@@ -13,14 +13,12 @@
   <title>{{template "title" .}}</title>
 
 <script src="/static/bootstrap/js/jquery-3.4.1.min.js"></script>   
-<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+<script src="/static/bootstrap/js/bootstrap.bundle.min.js"></script>
   
 </head>
-
-
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="/">[ BABYWOZKI ]</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,11 +43,12 @@
             </div>
           </li>
         </ul>
-      </div>
+      </div>  
+    {{template "admin-menu"}}    
     </nav>
 
-   {{template "body" .}}
-   {{template "scripts"}}
+{{template "body" .}}
+{{template "scripts"}}
   
       <footer class="text-muted">
       <div class="container">
