--- a/templates/remove.html
+++ b/templates/remove.html
@@ -3,7 +3,11 @@
 
 {{define "title"}}Remove{{end}}
 
+
 {{define "body"}}
+<div class="album py-5 bg-light">
+<div class="container">
+<div class="row">
 <table class="table">
   <thead class="thead-dark">
     <tr>
@@ -26,6 +30,9 @@
 {{end}}    
   </tbody>
 </table>
+</div>
+</div>
+</div>
 {{end}}
 
 {{define "scripts"}}
