--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -1,4 +1,14 @@
-﻿body { min-height: 75rem; padding-top: 4.5rem;}
+﻿body { 
+	min-height: 75rem; 
+	padding-top: 4.5rem;	
+	/*min-width:1000px;
+    width: auto !important;  
+    width:1000px; 	*/
+    /*background-image: url('/static/images/site/cropped-234322.jpg'); 
+	background-repeat: no-repeat; 
+	background-size: cover; 
+	background-position: center center;*/
+}
 
 #login-form {
         max-width: 400px;
@@ -32,7 +42,7 @@
   margin-bottom: 0;
   background-color: #fff;
 }
-@media (min-width: 768px) {
+@media (min-width: 1000px) {
   .jumbotron {
     padding-top: calc(var(--jumbotron-padding-y) * 2);
     padding-bottom: calc(var(--jumbotron-padding-y) * 2);
