--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,16 @@
 {{define "title"}}Login{{end}}
 
 {{define "body"}}
-
+<div class="container">
+<div class="row">
 <form id="login-form">
     <h1>LOGIN</h1>
     <input type="login" placeholder="Login" id="login" required/>
     <input type="password" placeholder="Password" id="pwd" required/>
     <input type="submit" value="Sign In" id="clicklogin"/>
 </form>    
+</div>
+</div>
 {{end}}
 
 {{define "scripts"}}
